# bakery

./: .gitignore  CLAUDE.md  LICENSE  backup.sh  diary-backup.service  diary-backup.timer  pyproject.toml  seed.py  seed_streams.py  todo_fix.md
.github/workflows/: deploy.yml
app/: auth.py  config.py  database.py  main.py
app/static/: app.js  style.css
app/templates/: admin.html  base.html  diary.html  login.html
tests/: conftest.py  test_access_control.py  test_auth_unit.py  test_curators.py  test_diary.py  test_grid.py  test_login_flow.py  test_migration.py  test_modules.py  test_security_hardening.py  test_startup.py  test_streams.py  test_students.py
