[project]
name = "diary"
version = "0.1.0"
description = "Online school diary for parents and teachers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "httpx>=0.28",
]
