[project]
name = "diary"
version = "0.1.0"
description = "Online school diary for parents and teachers"
requires-python = ">=3.11"
# Upper bounds cap surprise major-version upgrades that `pip install -e .` would
# otherwise pull on every deploy. For stronger supply-chain safety, generate a
# hash-pinned lockfile (uv/pip-tools) and install with --require-hashes.
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18,<0.1",
    "itsdangerous>=2.2,<3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
